; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_amd64-tdep.c_amd64_frame_base_address.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_amd64-tdep.c_amd64_frame_base_address.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.frame_info = type { i32 }
%struct.amd64_frame_cache = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.frame_info*, i8**)* @amd64_frame_base_address to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @amd64_frame_base_address(%struct.frame_info* %0, i8** %1) #0 {
  %3 = alloca %struct.frame_info*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca %struct.amd64_frame_cache*, align 8
  store %struct.frame_info* %0, %struct.frame_info** %3, align 8
  store i8** %1, i8*** %4, align 8
  %6 = load %struct.frame_info*, %struct.frame_info** %3, align 8
  %7 = load i8**, i8*** %4, align 8
  %8 = call %struct.amd64_frame_cache* @amd64_frame_cache(%struct.frame_info* %6, i8** %7)
  store %struct.amd64_frame_cache* %8, %struct.amd64_frame_cache** %5, align 8
  %9 = load %struct.amd64_frame_cache*, %struct.amd64_frame_cache** %5, align 8
  %10 = getelementptr inbounds %struct.amd64_frame_cache, %struct.amd64_frame_cache* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  ret i32 %11
}

declare dso_local %struct.amd64_frame_cache* @amd64_frame_cache(%struct.frame_info*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
